Fix background img resize on mobile

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -22,6 +22,17 @@ a { outline: none !important; }
 .logo {
   color: white; 
 }
+
+
+#home {
+  height:auto;/* was 300px*/
+}
+
+@media screen and (max-width:767px) {
+  #home{max-width:75%;} 
+}
+
+
 /* 
 	Modes
 */
@@ -40,6 +51,9 @@ a { outline: none !important; }
 /*
 	Layout
 */
+
+
+
 .content img { margin: 20px 0; max-width: 100%; }
 
 .centered { margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; height: 250px; }
@@ -51,7 +65,7 @@ a { outline: none !important; }
 @media screen and (max-width: 992px) { .centered.large { position: relative !important; padding: 0 !important; height: auto !important; } }
 
 section { min-height: 100%; width: 100%; position: relative; padding: 75px 30px; }
-@media screen and (max-width: 620px) { section { padding: 50px 20px; } }
+@media screen and (min-width: 620px) { section { padding: 50px 20px; } }
 section#home { height: 100%; }
 section#home p { color: #000; }
 section#about .centered { height: 250px; }
@@ -68,7 +82,8 @@ section#portfolio .item:hover img { -webkit-transform: scale(1.1, 1.1); -moz-tra
 section.title-block { height: 50% !important; min-height: 50%; }
 section .block { padding: 40px; }
 
-img.fs { min-height: 100%; min-width: 1024px; width: 100%; height: auto; position: fixed; top: 0; left: 0; }
+
+img.fs {  min-height: 95%; ; width: 100%; height: auto; position: fixed; top: 0; left: 0;}
 img.faded { -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$ms)"; filter: alpha(opacity=0); -moz-opacity: 1; -khtml-opacity: 1; opacity: 1; background: #000; }
 
 form { margin-top: 20px; padding: 20px; border: 1px solid rgba(0, 0, 0, 0.1); -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); -moz-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); -ms-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); }
